@@ -2,4 +2,5 @@ local item = ...
 
 function item:on_created()
 
+  item:set_assignable()
 end
